--- a/index.html
+++ b/index.html
@@ -3,26 +3,37 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title> {{title}}</title>
+    <title> Star Wars</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/styles.css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Handlee&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app">
-        <h1> Personagens do Star Wars Lego</h1>
-        <small>Olá, {{userName}}</small>
-
-        <form>
-            <input placeholder="Busca por nome..." v-model="searchName"/>
-            <button type="button" @click="search()">Buscar</button>
-        </form>
+        <div class="top">
+            <div>
+                <h1>{{title}}</title></h1>
+                <small>Olá, {{userName}}</small>   
+            </div>
+            <form>
+                <input placeholder="Busca por nome..." v-model="searchName"/>
+                <button type="button" @click="search()">Buscar</button>
+            </form>
+        </div>
 
         <div class="characters">
             <div class="item" v-for="item of characters">
                 <img :src="item.avatar" :alt="item.nome"/>
                 <p>{{item.nome}}</p>
-                <button @click="like(item.nome)">Like</button>
-                <button @click="remover(item.id)">Remover</button>
+                <span @click="like(item.nome)" class="like material-symbols-outlined">
+                    favorite
+                </span>
+                <span @click="remover(item.id)" class="delete material-symbols-outlined">
+                    delete
+                </span>
             </div>
         </div>
     </div>
